# cloud-conveyor

./: .conveyor.sample.yaml  .gitignore  .travis.yml  Cargo.toml  LICENSE  README.md  conveyor.sample.yaml  pyproject.toml
cloud-conveyor-aws/: Cargo.toml
cloud-conveyor-aws/src/: lib.rs
cloud-conveyor-cli/: .conveyor.sample.yaml  .conveyor.yaml  Cargo.toml
cloud-conveyor-cli/src/: main.rs
cloud-conveyor-core/: Cargo.toml
cloud-conveyor-core/src/: build.rs  chat.rs  deploy.rs  lib.rs  persist.rs  pipelining.rs  runtime.rs  state_machine.rs  teardown.rs  webhook.rs  yaml.rs
cloud-conveyor-core/tests/: pipeline.rs  teardown.rs  test_lib.rs  test_webhook.rs
cloud-conveyor-github/: Cargo.toml
cloud-conveyor-github/src/: lib.rs
cloud-conveyor-github/tests/: webhook.rs
cloud-conveyor-github/tests/data/: pr_closed.json  pr_merged.json  pr_reopened.json
data/slack/: approval.json
